# project-zero

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  AGENTS.md  ASSESSMENT_CHUNKED_LOADING.md  BENCHMARK_REPORT.md  BITNET_ANALYSIS.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPU_LLM_TERNARY_ENGINE.md  DEVELOPER_ONBOARDING.md  GOLDEN_RULES.md  IMPLEMENTATION_PLAN.md  LICENSE  MOE_RESEARCH_AND_FIX_PLAN.md  Makefile  PROJECT_ANALYSIS_REPORT.md  QA_STRATEGY_REPORT_FINAL_PHASE10.md  QUICK_SUMMARY.txt  README.md  SECURITY.md  SECURITY_FINDINGS.md  SOURCE_CODE_WITH_LINE_NUMBERS.txt  START_HERE.md  TEST_PLAN_AND_DOCUMENT.md  VISUAL_WEIGHT_LOADING_FLOW.txt  WALKTHROUGH_PHASE10.md  WALKTHROUGH_PHASE14.md  WEIGHT_LOADING_REFERENCE.md  benchmark_full_results.csv  offset_calculation_sequence.txt  qa_report.md  test_results.md  weight_loading_summary.md
.agents/rules/: config.md  core.md  docs.md  tests.md
.agents/workflows/: review-and-verify.md  start-session.md  update-project-memory.md
.claude/: BENCHMARK_SUMMARY.md  CONTEXT.md  INDEX.md
.claude/clusters/: CLUSTERS.md
.claude/processes/: PROCESSES.md
.claude/rules/: config.md  core.md  docs.md  tests.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  ROADMAP.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  performance_regression.md
.github/instructions/: config.instructions.md  core.instructions.md  docs.instructions.md  tests.instructions.md
.github/prompts/: debug-failure.prompt.md  implement-task.prompt.md  plan-task.prompt.md  review-changes.prompt.md  start-session.prompt.md  update-project-memory.prompt.md
.github/workflows/: ci.yml  release.yml  security_audit.yml
benchmark_results/: _reg_tmp_stderr.txt  _reg_tmp_stdout.txt  _run_stderr.txt  _run_tmp.txt  bitnet_sweep.csv  bitnet_threadsweep.csv  engine_sweep.csv  engine_threadsweep.csv  full_sweep_20260323_020029.csv  ipc_sweep_20260323_024530.csv  llama_bench.csv  llamacpp_sweep_20260323_025709.csv  llamacpp_sweep_20260323_025809.csv  llamacpp_sweep_20260323_030208.csv  llamacpp_sweep_final_20260323_030642.csv  perf_results.csv  smollm_sweep.csv  smollm_threadsweep.csv  system_info.txt
benchmark_results/perf_raw/: llama.cpp_T1_Sauto_CN_A_iostat.txt  llama.cpp_T1_Sauto_CN_A_mpstat.txt  llama.cpp_T1_Sauto_CN_A_out.txt  llama.cpp_T1_Sauto_CN_A_perf.txt  llama.cpp_T1_Sauto_CN_A_vmstat.txt  llama.cpp_T1_iostat.txt  llama.cpp_T1_perf.txt  llama.cpp_T1_vmstat.txt  llama.cpp_T4_iostat.txt  llama.cpp_T4_perf.txt  llama.cpp_T4_vmstat.txt  llama.cpp_T8_iostat.txt  llama.cpp_T8_mpstat.txt  llama.cpp_T8_perf.txt  llama.cpp_T8_vmstat.txt  project-zero_T1_Savx512f_Cbf16_iostat.txt  project-zero_T1_Savx512f_Cbf16_mpstat.txt  project-zero_T1_Savx512f_Cbf16_out.txt  project-zero_T1_Savx512f_Cbf16_perf.txt  project-zero_T1_Savx512f_Cbf16_vmstat.txt  project-zero_T1_iostat.txt  project-zero_T1_mpstat.txt  project-zero_T1_out.txt  project-zero_T1_perf.txt  project-zero_T1_vmstat.txt  project-zero_T4_iostat.txt  project-zero_T4_mpstat.txt  project-zero_T4_out.txt  project-zero_T4_perf.txt  project-zero_T4_vmstat.txt  project-zero_T8_iostat.txt  project-zero_T8_mpstat.txt  project-zero_T8_out.txt  project-zero_T8_perf.txt  project-zero_T8_vmstat.txt
benchmark_results/smollm2/: llama_t1.txt  llama_t2.txt  llama_t3.txt  llama_t4.txt  llama_t5.txt  llama_t6.txt  llama_t7.txt  llama_t8.txt  pz_t1.txt  pz_t2.txt  pz_t3.txt  pz_t4.txt  pz_t5.txt  pz_t6.txt  pz_t7.txt  pz_t8.txt
docs/: BRANCH_CHRONOLOGY.md  CHANGELOG.md  DEBUGGING_JOURNAL.md  DEEPSEEK_Q8_HANDOVER.md  FIX_PLAN.md  GROWTH_STRATEGY.md  KERNEL_INTERNALS.md  PERFORMANCE_CEILING_REPORT.md  PHASE10_PRE_AUDIT_REPORT.md  PHASE15_RAG.md  REGRESSION_VERIFICATION_2026-06-07.md  RELEASING.md  demo.webm
docs/ai/: change-trace.md  commit-log-guidance.md  decision-log.md  engineering-rules.md  mistakes.md  project-overview.md  session-start-checklist.md  tool-sync-policy.md
docs/architecture/: BITNET_IMPLEMENTATION_GUIDE.md  CPU_LLM_TERNARY_ENGINE.md  IMPLEMENTATION_PLAN.md
docs/phases/: WALKTHROUGH_PHASE11.md  WALKTHROUGH_PHASE21.md
docs/reports/: BENCHMARK_REPORT.md  INDEPENDENT_CODE_AUDIT_REPORT.md  TEST_REPORT_AND_WALKTHROUGH.md  test_execution_report.md
docs/session_audit/: ACTION_TIMELINE.md  FULL_RECONSTRUCTED_TRANSCRIPT.md  RAW_SESSION_TRANSCRIPT.md  SESSION_AUDIT_REPORT.md  TERMINAL_LOGS.md
docs/weight-loading/: START_HERE.md  WEIGHT_LOADING_ANALYSIS_INDEX.md
gemini/: GEMINI.md
include/agent/: agent_loop.h  cmd_exec.h  output_inject.h  tool_interceptor.h
include/api/: api_server.h  chat_compile.h  chat_request.h  sse_stream.h
include/cli/: args.h  repl.h  timer.h
include/core/: calibration.h  config.h  debug.h  error.h  gguf_loader.h  gguf_quant.h  gguf_reader.h  hardware_profile.h  moe_config.h  moe_weights.h  platform.h  run_state.h  step_timing.h  unpack.h  weights.h
tests/: a6_replication.sh  a6_replication_results.txt  a6_thread_sweep.sh  a6_thread_sweep_results.txt  agent_pty_runner.py  audit_math.c  audit_memory.c  audit_sliding_window_crash.c  audit_threadpool_stress.c  audit_tokenizer.c  forensic_audit_suite.c  monkey_tester.py  security_fuzzer.py  test_api_server.c  test_blackbox.c  test_bugfixes.c  test_cmd_exec.c  test_config.c  test_forward.c  test_harness.h  test_kv_cache.c  test_math.c  test_mmap.c  test_moe.c  test_packed_weights.c  test_q2k_matvec.c  test_rag.c  test_reasoning.c  test_redbox.c  test_sampling.c  test_simd.c  test_simd_vnni.c  test_threading.c  test_tokenizer.c  test_tool_interceptor.c  test_vision_components.c  test_vision_e2e.c  thread_sweep.sh  thread_sweep_results.txt
tools/: bench_full.c  bench_full_sweep.sh  bench_phase34.py  bench_simd.c  bench_sweep.sh  bench_sweep_full.sh  build_llama3_tokenizer.py  convert_hf.py  convert_hf_bitnet.py  convert_tokenizer.py  deepseek_bench.sh  deepseek_bench_perf.sh  deepseek_bench_report.py  extract_multimodal.py  fuzz_config.py  import_model.py  pack_ternary.py  plot_benchmark.py  regression_bench.sh
(+167 files in other folders)
